--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+p,
+thead {
+  font-family: "SpaceGrotesk";
+}
+.font-condstd-bold {
+  font-family: "CondStd-Bold";
+}
